Fix the white background shape in the introductory section
The sizes where a bit too high causing an overflow into the section of
the works cards

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -38,7 +38,7 @@
 
 @media (min-width: 765px) {
   .bgImageIntro::before {
-    height: 100rem;
+    height: 90rem;
   }
 }
 
@@ -124,14 +124,14 @@
 
   .contact-container::before {
     background-image: url("../images/heroDark.png");
-    background-position: 100% 0;
+    background-position: 103% 8rem;
     background-size: cover;
   }
 }
 
 @media (min-width: 855px) {
   .bgImageIntro::before {
-    height: 102rem;
+    height: 93rem;
   }
 
   .works {
@@ -167,10 +167,6 @@
     height: 57rem;
   }
 
-  .bgImageIntro::before {
-    height: 109rem;
-  }
-
   .aboutmyself .drop-buttons {
     flex-grow: 1.5;
   }
@@ -187,7 +183,7 @@
   }
 
   .bgImageIntro::before {
-    height: 137rem;
+    height: 115rem;
   }
 
   section.intro h1 {
